src/styles/global.css
/* global fonts */
@import '@fontsource/lato/400.css';
@import '@fontsource/lato/700.css';
@import '@fontsource/oswald/400.css';
@import '@fontsource/oswald/700.css';
@import '@fontsource/dm-serif-text/400.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
:root {
  /* Sustainers Template Colors */
  --sus-primary-bg: #414e46;
  --sus-secondary-bg: #2a5c6b;
  --sus-neutral-bg: #f5f5f5;
  --sus-bg-light: #f7f1e7;
  --sus-primary-heading: #1d3638;
  --sus-primary-text: #323232;
  --sus-secondary-text: #ffffff;
  --sus-accent-text: #e35c2a;
  --sus-green-text: #29b67e;
  --sus-accent-bg: #d2cfaf;
  --sus-secondary-accent: #2a5c6b;
  --sus-button-primary-bg: #e35c2a;
  --sus-button-primary-text: #ffffff;
  --sus-button-secondary-bg: #29b67e;
  --sus-button-secondary-hover: #29b67e;
  --sus-button-secondary-text: #ffffff;

  /* Marketing Template Colors */
  --mkt-primary-bg: #f4f3e7;
  --mkt-neutral-bg: #ffffff;
  --mkt-neutral-text: #ffffff;
  --mkt-primary-text: #000000;
  --mkt-secondary-text: #666666;
  --mkt-accent-text: #e35c2a;
  --mkt-accent-bg: #e35c2a;
  --mkt-secondary-accent: #1d3638;
  --mkt-button-primary-bg: transparent;
  --mkt-button-primary-border: #fff;
  --mkt-button-primary-hover: #29b67e;
  --mkt-button-primary-text: #fff;
  --mkt-button-secondary-bg: #d2cfaf;
  --mkt-button-secondary-text: #323232;

  --gray-500: #6b7280;
  --dark-green: #133739;
  --footer-bg: #000;
  --footer-text: #fff;
  --mkt-primary-heading-size: 8rem;

  --border-accent: #d6d4c9;
}

/* Sustainers Template Styles */
.sus-primary-bg {
  background-color: var(--sus-primary-bg);
}
.sus-secondary-bg {
  background-color: var(--sus-secondary-bg);
}
.sus-neutral-bg {
  background-color: var(--sus-neutral-bg);
}
.sus-bg-light {
  background-color: var(--sus-bg-light);
}
.sus-primary-heading {
  color: var(--sus-primary-heading);
}
.sus-primary-text {
  color: var(--sus-primary-text);
}
.sus-secondary-text {
  color: var(--sus-secondary-text);
}
.sus-accent-text {
  color: var(--sus-accent-text);
}
.sus-checkbox-text {
  color: var(--mkt-button-primary-hover);
}
.sus-green-text {
  color: var(--sus-green-text);
  fill: var(--sus-green-text);
}
.sus-accent-bg {
  background-color: var(--sus-accent-bg);
}
.sus-secondary-accent {
  color: var(--sus-secondary-accent);
}
.sus-button-primary-bg {
  background-color: var(--sus-button-primary-bg);
}
.sus-button-primary-text {
  color: var(--sus-button-primary-text);
}
.sus-button-secondary-bg {
  background-color: var(--sus-button-secondary-bg);
  border: 2px solid var(--sus-button-secondary-bg);
}
.sus-button-secondary-text {
  color: var(--sus-button-secondary-text);
}
.sus-button-secondary-hover:hover {
  background-color: transparent;
  border: 2px solid var(--sus-button-secondary-hover);
  color: var(--sus-button-secondary-hover);
}
/* Marketing Template Styles */
.mkt-hero {
  max-width: 1440px;
  margin: auto;
  padding: 4rem 1rem;
}
.mkt-hero-text {
  font-size: 1.6875rem;
}
.mkt-primary-bg {
  background-color: var(--mkt-primary-bg);
  padding: 2.5rem 1.15rem;
}
.mkt-primary-content {
  max-width: 1440px;
  margin: auto;
  font-family: 'Red Hat Mono', Sans-serif;
}
.mkt-primary-content p,
.mkt-primary-content li {
  font-size: 1.125rem;
  line-height: 1.75rem;
  color: var(--mkt-primary-text);
}
.mkt-neutral-bg {
  background-color: var(--mkt-neutral-bg);
}
.mkt-neutral-text {
  color: var(--mkt-neutral-text);
}
.mkt-primary-text {
  color: var(--mkt-primary-text);
  font-size: var(--mkt-primary-heading-size);
  line-height: 1em;
}
.mkt-secondary-text {
  color: var(--mkt-secondary-text);
}
.mkt-accent-text {
  color: var(--mkt-accent-text);
}
.mkt-accent-bg {
  background-color: var(--mkt-accent-bg);
}
.mkt-secondary-accent {
  color: var(--mkt-secondary-accent);
}
.mkt-primary-btn {
  background-color: var(--mkt-button-primary-bg);
  color: #fff;
  font-family: 'Red Hat Mono', Sans-serif;
  font-weight: 500;
  text-transform: uppercase;
  padding: 12px 24px;
  border-style: solid;
  border-width: 1px 1px 1px 1px;
  border-color: var(--mkt-button-primary-border);
  border-radius: 96px;
}
.mkt-primary-btn:hover {
  cursor: pointer;
}
.mkt-button-secondary-bg {
  background-color: var(--mkt-button-secondary-bg);
}
.mkt-button-secondary-text {
  color: var(--mkt-button-secondary-text);
}
/*****
Church page styles
*****/
.form-card {
  background: #fff;
}
.form-wrapper {
  display: flex
;
    flex-direction: column;
    box-sizing: border-box;
    overflow: hidden;
    justify-content: center;
    align-items: stretch;
}
.form-wrapper button
.hero-bg {
  height: 884px;
}
.hero-h1 {
  font-size: 5.5rem;
  line-height: 0.95;
  font-family: 'Gotham', san-serif;
  font-weight: 900 !important;
  color: var(--mkt-primary-text);
}
.hero-sub-heading {
  font-size: 2.5rem;
  line-height: 0.85;
  font-weight: normal;
  color: var(--dark-green);
}
.hero-p {
  font-family: 'Gotham', san-serif;
  font-size: 1.15rem;
  line-height: 1.75rem;
}
.hero-video {
  max-width: 100% !important;
  height: auto;
  border-radius: 20px;
  margin: 0px !important;
}
.heading-h2 {
  font-size: 2.25rem;
  line-height: 1.2;
  color: var(--mkt-primary-text);
}
.content-body {
  margin-top: -4rem;
}
.donation-card {
  border: 1px solid var(--mkt-button-primary-hover);
  border-radius: 8px;
  background-color: var(--mkt-neutral-bg);
  margin: 0.75rem auto;
}
.donation-card-grey {
  border: 1px solid var(--border-accent);
}
.donation-card-locked {
  color: var(--sus-primary-heading);
  opacity: 0.4;
}
.donation-card-black {
  color: var(--mkt-primary-text);
}
.donation-card-image {
  border-radius: 8px 8px 0 0;
  width: 100%;
  height: 250px;
  object-fit: cover;
}
.donation-card-status {
  background: var(--mkt-button-primary-hover);
  padding: 2px 8px;
  height: 40px;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  font-weight: 600;
}
.donation-card-content {
  @apply pb-6
}
.donation-card-content > :not(.progress-bar) {
  @apply px-6;
}
.donation-card-funded-percent-header {
  font-family: 'Gotham', san-serif;
  font-size: 1rem;
  font-weight: 700;
  letter-spacing: 11%;
  line-height: 100%;
}
.donation-card-subheading {
  font-family: 'Gotham', san-serif;
  letter-spacing: 11%;
  font-size: 0.75rem;
  text-transform: uppercase;
  font-weight: 700;
  line-height: 100%;
  @apply mb-2 mt-4;
}
.donation-card-heading {
  font-size: 2.25rem;
  line-height: 1;
  letter-spacing: -1%;
  margin: 0.5rem 0;
  color: var(--sus-primary-heading);
  @apply font-dm-serif;
}
.donation-card-amount {
  font-size: 1.5rem;
  font-weight: 600;
  color: var(--sus-green-text);
}
.donation-card-description {
  font-size: 1.1rem;
  font-family: 'Gotham', sans-serif;
  line-height: 1.5;
}
.donation-card-ul {
  list-style-type: none;
  padding-left: 0;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 1.1rem;
}
.donation-card-li {
  margin-bottom: 0.5rem;
  padding-left: 1.5rem;
  position: relative;
  font-weight: bold;
}
.donation-card-li::before {
  content: ' ';
  position: absolute;
  left: 0;
  top: 0.5rem;
  width: 0.5rem;
  height: 0.5rem;
  background-color: var(--sus-green-text);
  border-radius: 50%;
}
.grecaptcha-badge {
  visibility: hidden !important;
}
.more-to-come-card {
  color: #ffffff;
  font-family: 'Gotham', san-serif;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 1rem;
  letter-spacing: 11%;
  text-align: center;
}
.more-to-come-card-image {
  border-radius: 8px;
  width: 100%;
  height: 250px;
  object-fit: cover;
}
.content-wrapper {
  margin-top: 5rem;
  margin-right: 10rem;
}
.content-wrapper h2 {
  font-family: 'Gotham', sans-serif;
  font-size: 3rem;
  line-height: 1;
}
.content-wrapper h3 {
  font-family: 'Gotham', sans-serif;
  font-size: 1.75rem;
  font-weight: bold;
}
.content-wrapper strong {
  font-weight: bold;
}
.content-wrapper p {
  font-family: 'Gotham', sans-serif;
  font-size: 17px;
  margin: 1.5rem 0px;
}
.gray-500 {
  color: var(--gray-500);
}
.prose {
  max-width: 100% !important;
}
.footer {
  background-color: var(--footer-bg);
  color: var(--footer-text);
}
@font-face {
  font-family: 'Rader Bold';
  src: url('/fonts/PPRader-Bold.otf') format('opentype');
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: 'Rader Medium';
  src: url('/fonts/PPRader-Medium.otf') format('opentype');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: 'Sentinel Bold';
  src: url('/fonts/._Sentinel-Bold-Pro.otf') format('opentype');
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: 'Sentinel Light';
  src: url('/fonts/._Sentinel-Light-Pro.otf') format('opentype');
  font-weight: 100;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: 'Gotham';
  src: url('/fonts/GothamOffice-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: 'Red Hat Mono';
  src: url('/fonts/FiraCode-VariableFont_wght.ttf') format('truetype');
  font-weight: 100;
  font-style: normal;
  font-display: swap;
}
.rader-bold {
  font-family: 'Rader Bold', sans-serif;
}
.rader {
  font-family: 'Rader Medium', sans-serif;
}
.sentinel-light {
  font-family: 'Sentinel Light', sans-serif;
}
.gotham {
  font-family: 'Gotham', sans-serif;
}
.red-hat-mono {
  font-family: 'Red Hat Mono', sans-serif;
}
@media (max-width: 768px) {
  :root {
    --mkt-primary-heading-size: 4rem;
  }
  .mkt-hero-text {
    font-size: 1.3125rem;
  }
  .mkt-primary-btn {
    font-size: 1.166rem;
  }
  .hero-bg {
    height: auto;
  }
  .hero-h1 {
    font-size: 3.25rem;
    line-height: 1.2;
    font-family: 'Gotahm', sans-serif;
    font-weight: bold;
    color: var(--mkt-primary-text);
  }
  .hero-sub-heading {
    font-size: 2rem;
    line-height: 1.2;
    color: var(--dark-green);
  }
  .content-wrapper {
    margin-right: 0px;
  }
  .content-wrapper h2 {
    font-size: 2rem;
  }
  .content-wrapper h3 {
    font-size: 1.5rem;
  }
  .content-body {
    margin-top: -3rem;
  }
}
@media (max-width: 1720px) {
  .form-card {
    max-width: 35rem !important;
  }
}
@media (min-width: 1300px) and (max-width: 1720px) {
  .form-card {
    max-width: 39rem !important;
  }
}
@media (min-width: 1024px) and (max-width: 1299px) {
  .form-card {
    max-width: 29rem !important;
  }
}
@media (max-width: 1023px) {
  .form-card {
    max-width: 600px !important;
    position: static !important;
    right: auto !important;
    top: auto !important;
    margin: 1rem auto !important;
  }
}
@media (max-width: 350px) {
  .hero-h1 {
    font-size: 2.75rem;
  }
}

